# PERE-ZEUSS

./: .gitignore  CLEANUP_AND_REORGANIZE.sh  Cargo.toml  Cargo_FINAL.toml  DEPLOY_ZEUS_VPS.sh  README.md  README_FINAL.md  README_ZEUS_PERFORMANCE.md  REMPLACER_WORKSPACE_FINAL.ps1  REMPLACER_WORKSPACE_SIMPLE.ps1  SYNC_COMPLETE.sh  TRANSFER_TO_VPS.txt  VPS_CLEANUP_AND_REORGANIZE.sh  VPS_INSTALL_SIMPLE.txt  ZEUS_CLEAN.ps1  ZEUS_SOLUTION_QUI_MARCHE.txt  ZEUS_UBUNTU_EXPRESS.txt  build.ps1  build.rs  build.sh  build_for_ubuntu.ps1  build_for_ubuntu.sh  build_local.ps1  build_simple.ps1  build_zeus_vps.sh  connect_test_ubuntu.ps1  connect_zeus_ubuntu.ps1  create-admin-auto.sh  demo_zeus_power.bat  demo_zeus_power.rs  deploy_to_vps.ps1  deploy_zeus_master.ps1  fix-postal-issues.sh  fix_ubuntu_zeus.sh  install-postal-simple.sh  install-postal.sh  optimus_fixed.sh  optimus_mini.sh  optimus_oneliner.sh  optimus_ultimate_complete.sh  (+17 more)
ai_engine/: Cargo.toml
ai_engine/src/: lib.rs
cleanup/: Cargo.toml
cleanup/src/: lib.rs
communication/: Cargo.toml
communication/src/: lib.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs
encryption/: Cargo.toml
encryption/src/: lib.rs
evasion/: Cargo.toml
evasion/src/: lib.rs
identity_masking/: Cargo.toml
identity_masking/src/: lib.rs
injection/: Cargo.toml
injection/src/: lib.rs
network_stealth/: Cargo.toml
network_stealth/src/: lib.rs
obfuscation/: Cargo.toml
obfuscation/src/: lib.rs
performance/: Cargo.toml
performance/src/: lib.rs
persistence/: Cargo.toml
persistence/src/: lib.rs
polymorphism/: Cargo.toml
polymorphism/src/: lib.rs
src/: main.rs
steganography/: Cargo.toml
steganography/src/: lib.rs
system_integration/: Cargo.toml
system_integration/src/: lib.rs
