[package]
name = "optimus-ultimate-cli"
version = "1.0.0"
edition = "2021"
authors = ["PERE-ZEUSS <contact@optimus-ultimate.com>"]
license = "MIT"
description = "CLI for OPTIMUS ULTIMATE PME Security Suite"
default-run = "optimus-ultimate-cli"

[[bin]]
name = "optimus-ultimate-cli"
path = "src/main.rs"

[[bin]]
name = "demo_zeus_power"
path = "demo_zeus_power.rs"

[workspace]
members = [
    "core",
    "performance", 
    "communication",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["PERE-ZEUSS <contact@optimus-ultimate.com>"]
license = "MIT"
description = "OPTIMUS ULTIMATE - Advanced PME Security Suite"

[dependencies]
core = { path = "core" }
performance = { path = "performance" }
communication = { path = "communication" }

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
zeroize = "1.7"
secrecy = "0.8"
ring = "0.17"
rustls = "0.22"
webpki-roots = "0.26"
winapi = { version = "0.3", features = ["full"] }
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
libc = "0.2"
mio = "0.8"
crossbeam = "0.8"
rayon = "1.8"
dashmap = "5.5"
prometheus = "0.13"
histogram = "0.6"
