[package]
name = "optimus-ultimate-cli"
version = "1.0.0"
edition = "2021"
authors = ["PERE-ZEUSS <contact@optimus-ultimate.com>"]
license = "MIT"
description = "CLI for OPTIMUS ULTIMATE PME Security Suite"

[[bin]]
name = "optimus-ultimate-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"