[package]
name = "communication"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Modern communication methods for ZEUS (replacing SMTP)"

[dependencies]
core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait = "0.1"
reqwest.workspace = true