[package]
name = "performance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Performance monitoring and optimization for ZEUS"

[dependencies]
core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait = "0.1"
prometheus.workspace = true